@@ -91,10 +91,12 @@ delimited <code>name=value</code> pairs)</p>
       and the default archive location.  These preferences are loaded whenever
       the nym logs in.  If <code>prefs</code> is called with no arguments, 
       then the preferences are simply displayed and not updated.</dd>
-  <dt id="general_import"><code>import --in $filename</code></dt>
+  <dt id="general_import"><code>import --in $filename [--reimport $boolean] [--passphrase $pass]</code></dt>
   <dd>Import the specified <code>.syndie</code> file (either a metadata message or
       a post).  Alternately, it can import key files generated by
-      <code>keygen</code>.</dd>
+      <code>keygen</code>.  If <code>reimport</code> is set, it will drop the message
+      and reimport it, if necessary.  If <code>passphrase</code> is specified, that
+      will be used for the passphrase based encryption.</dd>
   <dt id="general_keygen"><code>keygen --type (read|manage|post|reply) [--scope $channelHash] (--pubOut $publicKeyFile --privOut $privateKeyFile | --sessionOut $sessionKeyFile)</code></dt>
   <dd>Generate a new crypto key for reading posts (an AES256 session key),
       signing channel management messages (a DSA1024 public and private keypair),
@@ -393,7 +395,7 @@ delimited <code>name=value</code> pairs)</p>
   <dt id="syndicate_buildindex"><code>buildindex</code></dt>
   <dd>creates or updates the index of the local archive</dd>
   <dt id="syndicate_getindex"><code>getindex --archive $url [--proxyHost $host --proxyPort $port] [--pass $pass]
-            [--scope (all|new|meta|unauth)] [--channel $chan]</code></dt>
+            [--scope (all|new|meta|unauth)] [--channel $chan] [--reimport $boolean]</code></dt>
   <dd>fetch the index of the referenced archive, pulling in their list of
       all posts, new posts, only metadata, or new unauthenticated posts.  If the
       $url begins with "/" or "file://", it is treated as a local archive on the
@@ -401,7 +403,8 @@ delimited <code>name=value</code> pairs)</p>
       or "CHK@", it is treated as a Freenet 0.7 archive, and the proxies are
       treated as the location of the fproxy instance (defaulting to localhost port
       8888).  Otherwise, the $url refers to a standard URL, and the HTTP proxies are
-      used if specified.</dd>
+      used if specified.  If <code>reimport</code> is set, individual posts that were
+      already imported will be dropped and reimported.</dd>
   <dt id="syndicate_diff"><code>diff</code></dt>
   <dd>summarize the differences between the fetched index and the local db</dd>
   <dt id="syndicate_fetch"><code>fetch [--style (diff|known|metaonly|pir|unauth)] [--includeReplies $boolean]</code></dt>
@@ -423,8 +426,10 @@ delimited <code>name=value</code> pairs)</p>
       includes <code>pass=$pass</code>.  Perhaps later that will switch to
       base64(HMAC($YYYYMMDD,PBE($password))) so it can be slightly secure even
       in absence of TLS/etc?</dd>
-  <dt id="syndicate_bulkimport"><code>bulkimport --dir $directory --delete $boolean</code></dt>
-  <dd>import all of the .syndie files in the given directory, deleting them on completion</dd>
+  <dt id="syndicate_bulkimport"><code>bulkimport --dir $directory --delete $boolean [--reimport $boolean]</code></dt>
+  <dd>import all of the .syndie files in the given directory, deleting them on completion.
+      If <code>reimport</code> is set, individual posts that were already imported
+      will be dropped and reimported.</dd>
   <dt id="syndicate_freenetpost"><code>freenetpost --privateSSK ($key|new) [--fcpHost localhost] [--fcpPort 9481]</code></dt>
   <dd>post the entire local archive into Freenet, storing the data either in the
       given SSK or in a brand new SSK, as requested.  This only works with Freenet
